Home.CSS Fixed bubble position on Mobile

--- a/www.silipint.com/public/css/home.css
+++ b/www.silipint.com/public/css/home.css
@@ -155,6 +155,46 @@
 		right:auto;
 		left:50%;
 		text-align:center;
-		margin-left:-10%;
+		margin-left:-7%;
 	}
+}
+
+@media (max-width:640px) {
+
+.carousel-indicators {
+		bottom:0;
+		margin-right:auto;
+		margin-left:-8%;
+		text-align:center;
+	}
+
+
+}
+
+
+
+
+@media (max-width:480px) {
+
+.carousel-indicators {
+		bottom:0;
+		margin-right:auto;
+		margin-left:-11%;
+		text-align:center;
+	}
+
+
+}
+
+
+@media (max-width:320px) {
+
+.carousel-indicators {
+		bottom:0;
+		margin-right:auto;
+		margin-left:-16%;
+		text-align:center;
+	}
+
+
 }
